--- a/preamble.tex
+++ b/preamble.tex
@@ -65,6 +65,8 @@
 \DeclareRobustCommand{\Zll}{\HepProcess{ \PZ/\Pphotonx \to ll}\xspace}
 \DeclareRobustCommand{\Zmm}{\HepProcess{ \PZ/\Pphotonx \to \Pgm\Pgm}\xspace}
 \DeclareRobustCommand{\Zee}{\HepProcess{ \PZ/\Pphotonx \to \Pe\Pe}\xspace}
+\DeclareRobustCommand{\Zmmnog}{\HepProcess{ \PZ \to \Pgm\Pgm}\xspace}
+\DeclareRobustCommand{\Zeenog}{\HepProcess{ \PZ \to \Pe\Pe}\xspace}
 \DeclareRobustCommand{\Ztautau}{\HepProcess{ \PZ/\Pphotonx \to \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\Wjets}{\PW + jets\xspace}
 \DeclareRobustCommand{\ttbar}{\HepProcess{\Ptop\APtop}\xspace}
@@ -79,4 +81,5 @@
 \newcommand{\mh}{$m_{\PHiggslight}$}
 \newcommand{\pT}{$p_{\text{T}}$}
 \newcommand{\mT}{$m_{\text{T}}$}
+\newcommand{\MET}{$E_{\text{T}}^{\text{miss}}$}
 \DeclareRobustCommand{\protonproton}{\Pproton\Pproton\xspace}
